# pearsonify

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  example.py  pyproject.toml
.github/workflows/: cicd.yml
examples/: calibration_example.py  example.py
pearsonify/: __init__.py  calibrator.py  utils.py  wrapper.py
src/pearsonify/: __init__.py
tests/: conftest.py  test_calibrator.py  test_pearsonify.py  test_utils.py
