[tool.poetry]
name = "pearsonify"
version = "1.0.0"
description = "A lightweight package for computing confidence intervals for classification tasks using conformal prediction and Pearson residuals."
authors = ["xRiskLab <contact@xrisklab.ai>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "pearsonify", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
scikit-learn = "^1.2"
matplotlib = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
